# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_game/: cli.py  launch_game.py
brain_game/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_game/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
