[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Parker-idc <egor.kruchenkov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_game" },
]

[tool.poetry.scripts]
brain-game = "brain_game.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
