[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Mind games set"
authors = ["Parker-idc <egor.kruchenkov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Parker-idc/python-project-49"
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Topic :: Terminals :: Games"
]
packages = [
  { include = "brain_game" },
]

[tool.poetry.scripts]
brain-games = "brain_game.scripts.brain_games:main"
brain-even = "brain_game.scripts.brain_even:main"
brain-calc = "brain_game.scripts.brain_calc:main"
brain-gcd = "brain_game.scripts.brain_gcd:main"
brain-progression = "brain_game.scripts.brain_progression:main"
brain-prime = "brain_game.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
